--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -149,6 +149,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       document.getElementById('mapDiv').style.display = 'none';
     }
   </script>
+
+<!-- Below is the script that will insert/enable the Google Maps API key for this project - still need to obtain the key and paste it in here -->
+<!-- DAN NOTE: you should try loading this with https encryption as well for better security compliance -->
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAz9KExLubxHaL-E4wZ30-xHEwRAFw8NpE"></script> 
 
 
 </body>
